--- a/controllers/youtube-search.html
+++ b/controllers/youtube-search.html
@@ -46,11 +46,11 @@
 		<div id="top-title">
 			<div class="navbar navbar-static-top">
 				<div class="navbar-inner">
-					<a class="brand" href="index.html">Asuldian</a>
+					<a class="brand" href="../index.html">Asuldian</a>
 					<ul class="nav">
-					  <li><a href="index.html">Home</a></li>
+					  <li><a href="../index.html">Home</a></li>
 					  <li class="active"><a href="youtube-search.html">Youtube search</a></li>
-					  <li><a href="#">Link</a></li>
+					  <li><a href="google+.html">Google +</a></li>
 					</ul>
 				</div>
 			</div>
