Fix incremental game. Testing new google API.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script>
-			var APIKEY		=	'AIzaSyD6jgZkBrETrJhcnLqZ3IC0A27xQILaQ-U';
+			var APIKEY		=	'AIzaSyBh9dIsvOzx8GI6TcogQq-tzvDsa88zLDA';
 			var OAUTHURL    =   'https://accounts.google.com/o/oauth2/auth?';
 			var VALIDURL    =   'https://www.googleapis.com/oauth2/v1/tokeninfo?access_token=';
 			var SCOPE       =   'https://www.googleapis.com/auth/youtube';
-			var CLIENTID    =   '219191596829-06a8461kjq8lpimgm6vq0csdltct5bu6.apps.googleusercontent.com';
-			var REDIRECT    =   'http://www.asuldian.eu'
+			var CLIENTID    =   '43658070807-6bsernl3aa840kr3l88eofo4sams4fld.apps.googleusercontent.com';
+			var REDIRECT    =   'http://clemator.github.io/index.html'
 			var TYPE        =   'token';
 			var _url        =   OAUTHURL + 'scope=' + SCOPE + '&client_id=' + CLIENTID + '&redirect_uri=' + REDIRECT + '&response_type=' + TYPE;
 			var acToken;
