--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 							window.clearInterval(pollTimer);
 							var url =   win.document.URL;
 							acToken =   gup(url, 'access_token');
+							console.log(url);
+                            console.log(gup(url, 'access_token'));
 							tokenType = gup(url, 'token_type');
 							expiresIn = gup(url, 'expires_in');
 							win.close();
-							console.log(acToken);
 							validateToken(acToken);
 						}
 					} catch(e) {
