Fix youtube to google plus.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 		<link rel="stylesheet" style="text/css" href="assets/css/bootstrap.min.css">
 		<title>Asuldian's Website</title>
 		<script src="controllers/auth.js"></script>
-		<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+        <script src="https://apis.google.com/js/plus.js"></script>
+		<script src="https://apis.google.com/js/client:plus.js"></script>
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script>
 			var APIKEY		=	'AIzaSyBh9dIsvOzx8GI6TcogQq-tzvDsa88zLDA';
 			var OAUTHURL    =   'https://accounts.google.com/o/oauth2/auth?';
 			var VALIDURL    =   'https://www.googleapis.com/oauth2/v1/tokeninfo?access_token=';
-			var SCOPE       =   'https://www.googleapis.com/auth/youtube';
+			var SCOPE       =   'https://www.googleapis.com/auth/plus.me';
 			var CLIENTID    =   '43658070807-6bsernl3aa840kr3l88eofo4sams4fld.apps.googleusercontent.com';
 			var REDIRECT    =   'http://clemator.github.io/index.html'
 			var TYPE        =   'token';
