--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
 		<script src="https://apis.google.com/js/client.js"></script>
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script>
-            function auth() {
-                console.log('AUTH');
-                var config = {
-                    'client_id': '43658070807.apps.googleusercontent.com',
-                    'scope': 'https://www.google.com/m8/feeds'
-                };
-                gapi.auth.authorize(config, function() {
-                      fetch(gapi.auth.getToken());
-                });
+			var clientId = '43658070807-6bsernl3aa840kr3l88eofo4sams4fld.apps.googleusercontent.com';
+            var apiKey = 'AIzaSyBh9dIsvOzx8GI6TcogQq-tzvDsa88zLDA';
+            var scopes = 'https://www.google.com/m8/feeds';
+
+            $(document).on("click","#loginText", function(){
+                gapi.client.setApiKey(apiKey);
+                window.setTimeout(checkAuth,3);
+            });
+
+            function checkAuth() {
+                gapi.auth.authorize({client_id: clientId, scope: scopes, immediate: false}, handleAuthResult);
             }
-            function fetch(token) {
-                console.log('PROUT');
-                $.ajax({
-                    url: "https://www.google.com/m8/feeds/contacts/default/full?access_token=" + token.access_token + "&alt=json",
-                    dataType: 'jsonp',
-                    success: function(data) {
-                    console.log(JSON.stringify(data));
-                    }
-                });
+
+            function handleAuthResult(authResult) {
+                if (authResult && !authResult.error) {
+                    $.get("https://www.google.com/m8/feeds/contacts/default/full?alt=json&access_token=" + authResult.access_token + "&max-results=700&v=3.0",
+                        function(response){
+                            console.log(response);
+                        }
+                    );
+                }
             }
-			/*var APIKEY		=	'AIzaSyBh9dIsvOzx8GI6TcogQq-tzvDsa88zLDA';
+            /*var APIKEY		=	'AIzaSyBh9dIsvOzx8GI6TcogQq-tzvDsa88zLDA';
 			var OAUTHURL    =   'https://accounts.google.com/o/oauth2/auth?';
 			var VALIDURL    =   'https://www.googleapis.com/oauth2/v1/tokeninfo?access_token=';
 			var SCOPE       =   'https://www.googleapis.com/auth/plus.me';
@@ -134,7 +136,7 @@
 			</div>
 		</div>
 		<div id="page-content" class="navbar-text">
-			<a href='#' onClick='auth();' id="loginText"> Click here to login </a>
+			<a href='#' id="loginText"> Click here to login </a>
 			<a href="#" style="display:none" id="logoutText" target='myIFrame' onclick="myIFrame.location='https://www.google.com/accounts/Logout'; startLogoutPolling();return false;"> Click here to logout </a>
 			<iframe name='myIFrame' id="myIFrame" style='display:none'></iframe>
 			<ul id="feed-list" class="thumbnails">
