--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
                 if (authResult && !authResult.error) {
                     $.get("https://www.google.com/m8/feeds/contacts/default/full?alt=json&access_token=" + authResult.access_token + "&max-results=700&v=3.0",
                         function(response){
-                            console.log(response['feed']['entry']);
+                            response = response['feed']['entry'];
+                            for (var i = 0; i < response.length; i++) {
+                                if (typeof response['i']['gd$email'] != 'undefined')
+                                    console.log(response['i']);
+                            }
                         }
                     );
                 }
