--- a/index.html
+++ b/index.html
@@ -1,151 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" style="text/css" href="assets/css/index.css">
-		<link rel="stylesheet" style="text/css" href="assets/css/bootstrap.min.css">
-		<title>Asuldian's Website</title>
-		<script src="controllers/auth.js"></script>
-		<script src="https://apis.google.com/js/client.js"></script>
-		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-		<script>
-			var clientId = '43658070807-6bsernl3aa840kr3l88eofo4sams4fld.apps.googleusercontent.com';
-            var apiKey = 'AIzaSyBh9dIsvOzx8GI6TcogQq-tzvDsa88zLDA';
-            var scopes = 'https://www.google.com/m8/feeds';
-
-            $(document).on("click","#loginText", function(){
-                gapi.client.setApiKey(apiKey);
-                window.setTimeout(checkAuth,3);
-            });
-
-            function checkAuth() {
-                gapi.auth.authorize({client_id: clientId, scope: scopes, immediate: false}, handleAuthResult);
-            }
-
-            function handleAuthResult(authResult) {
-                if (authResult && !authResult.error) {
-                    $.get("https://www.google.com/m8/feeds/contacts/default/full?alt=json&access_token=" + authResult.access_token + "&max-results=700&v=3.0",
-                        function(response){
-                            response = response['feed']['entry'];
-                            for (var i = 0; i < response.length; i++) {
-                                if (typeof response[i]['gd$email'] != 'undefined' && typeof response[i]['gd$name'] != 'undefined') {
-                                    console.log(response[i]['gd$name']['gd$fullName']['$t'] + " : " + response[i]['gd$email'][0]['address']);
-                                }
-                            }
-                        }
-                    );
-                }
-            }
-            /*var APIKEY		=	'AIzaSyBh9dIsvOzx8GI6TcogQq-tzvDsa88zLDA';
-			var OAUTHURL    =   'https://accounts.google.com/o/oauth2/auth?';
-			var VALIDURL    =   'https://www.googleapis.com/oauth2/v1/tokeninfo?access_token=';
-			var SCOPE       =   'https://www.googleapis.com/auth/plus.me';
-			var CLIENTID    =   '43658070807-6bsernl3aa840kr3l88eofo4sams4fld.apps.googleusercontent.com';
-			var REDIRECT    =   'http://clemator.github.io/index.html'
-			var TYPE        =   'token';
-			var _url        =   OAUTHURL + 'scope=' + SCOPE + '&client_id=' + CLIENTID + '&redirect_uri=' + REDIRECT + '&response_type=' + TYPE;
-			var acToken;
-			var tokenType;
-			var expiresIn;
-			var user;
-			var loggedIn    =   false;
-			function login() {
-				var win         =   window.open(_url, "windowname1", 'width=800, height=600'); 
-
-				var pollTimer   =   window.setInterval(function() { 
-					try {
-						if (win.document.URL.indexOf(REDIRECT) != -1) {
-							window.clearInterval(pollTimer);
-							var url =   win.document.URL;
-							acToken =   gup(url, 'access_token');
-							tokenType = gup(url, 'token_type');
-							expiresIn = gup(url, 'expires_in');
-							win.close();
-							validateToken(acToken);
-						}
-					} catch(e) {
-					}
-				}, 100);
-			}
-			function validateToken(token) {
-				$.ajax({
-					url: VALIDURL + token,
-					data: null,
-					success: function(responseText){
-						console.log(responseText);
-						loggedIn = true;
-						getUserInfo();
-						getUserFeed();
-						$('#loginText').hide();
-						$('#logoutText').show();
-					},  
-					dataType: "jsonp"  
-				});
-			}
-
-			function gup(url, name) {
-				name = name.replace(/[[]/,"\[").replace(/[]]/,"\]");
-				var regexS = "[\?&#]" + name + "=([^&#]*)";
-				var regex = new RegExp(regexS);
-				var results = regex.exec(url);
-				if( results == null )
-					return "";
-				else
-					return results[1];
-			}
-			
-			function getUserInfo() {
-				$.ajax({
-					url: 'https://gdata.youtube.com/feeds/api/users/default/uploads?access_token=' + acToken,
-					data: null,
-					success: function(resp) {
-						user    =   resp;
-						console.log(user);
-					},
-					dataType: "jsonp"
-				});
-			}
-			
-			function getUserFeed() {
-				var query = $.ajax({
-					type: 'GET',
-					dataType: "json",
-					url: 'https://www.googleapis.com/youtube/v3/activities?part=snippet&home=true&key=' + APIKEY
-				});
-				query.done(function() {
-					$('#feed-list').empty();
-					$.each(query.responseJSON.items, function(i, item) {
-						$('#feed-list').append('<li class="span4"><div class="thumbnail"><img src="' + query.responseJSON.items[i].snippet.thumbnails.default.url + '"></div></li>');
-					});
-				});
-			}
-			function startLogoutPolling() {
-				$('#loginText').show();
-				$('#logoutText').hide();
-				loggedIn = false;
-			}*/
-		</script>
+		<title>Clemator's github</title>
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+		
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	</head>
 	<body>
-		<div id="top-title">
-			<div class="navbar navbar-static-top navbar-inverse">
-				<div class="navbar-inner">
-					<a class="brand" href="index.html">Asuldian</a>
-					<ul class="nav">
-					  <li class="active"><a href="index.html">Home</a></li>
-					  <li><a href="views/youtube-search.html">Youtube search</a></li>
-					  <li><a href="views/google+.html">Google +</a></li>
-					  <li><a href="views/incremental.html">The game</a></li>
-					</ul>
+		<div ng-app="myApp">
+			<div id="top-title">
+				<div class="navbar navbar-static-top navbar-inverse">
+					<div class="container-fluid">
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+						<a class="navbar-brand" href="#/home">Clemator</a>
+						</div>
+						<div class="collapse navbar-collapse">
+							<ul class="nav  navbar-nav">
+							  <li><a href="#/youtube">Youtube search</a></li>
+							  <li><a href="views/google+.html">Google +</a></li>
+							  <li><a href="views/incremental.html">The game</a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
+			<div ng-view></div>
 		</div>
-		<div id="page-content" class="navbar-text">
-			<a href='#' id="loginText"> Click here to login </a>
-			<a href="#" style="display:none" id="logoutText" target='myIFrame' onclick="myIFrame.location='https://www.google.com/accounts/Logout'; startLogoutPolling();return false;"> Click here to logout </a>
-			<iframe name='myIFrame' id="myIFrame" style='display:none'></iframe>
-			<ul id="feed-list" class="thumbnails">
-			</ul>
-		</div>
+		
+		<script src="myApp.js"></script>
+		<script src="controllers/mainController.js"></script>
+		<script src="routes.js"></script>
 	</body>
 </html>
