Working on youtube module.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
 		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" style="text/css" href="assets/css/youtube-search.css">
+		<link rel="stylesheet" style="text/css" href="assets/css/base.css">
 	</head>
 	<body>
 		<div ng-app="myApp">
@@ -39,6 +41,7 @@
 		
 		<script src="myApp.js"></script>
 		<script src="controllers/mainController.js"></script>
+		<script src="controllers/youtubeController.js"></script>
 		<script src="routes.js"></script>
 	</body>
 </html>
