Add game view. Fix game controller. Fix app routes.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" style="text/css" href="assets/css/youtube-search.css">
 		<link rel="stylesheet" style="text/css" href="assets/css/base.css">
+		<link rel="stylesheet" style="text/css" href="assets/css/incremental.css">
 	</head>
 	<body>
 		<div ng-app="myApp">
@@ -29,8 +30,8 @@
 						<div class="collapse navbar-collapse">
 							<ul class="nav  navbar-nav">
 							  <li><a href="#/youtube">Youtube search</a></li>
-							  <li><a href="views/google+.html">Google +</a></li>
-							  <li><a href="views/incremental.html">The game</a></li>
+							  <li><a href="#/google">Google +</a></li>
+							  <li><a href="#/incremental">The game</a></li>
 							</ul>
 						</div>
 					</div>
@@ -42,6 +43,7 @@
 		<script src="myApp.js"></script>
 		<script src="controllers/mainController.js"></script>
 		<script src="controllers/youtubeController.js"></script>
+		<script src="controllers/incrementalController.js"></script>		
 		<script src="routes.js"></script>
 	</body>
 </html>
