Working on kingdom game.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" style="text/css" href="assets/css/youtube-search.css">
 		<link rel="stylesheet" style="text/css" href="assets/css/base.css">
 		<link rel="stylesheet" style="text/css" href="assets/css/incremental.css">
+		<link rel="stylesheet" style="text/css" href="assets/css/kingdom.css">
 	</head>
 	<body>
 		<div ng-app="myApp">
@@ -32,6 +33,7 @@
 							  <li><a href="#/youtube">Youtube search</a></li>
 							  <li><a href="#/google">Google +</a></li>
 							  <li><a href="#/incremental">The game</a></li>
+							  <li><a href="#/kingdom">Kingdom</a></li>
 							</ul>
 						</div>
 					</div>
@@ -43,7 +45,11 @@
 		<script src="myApp.js"></script>
 		<script src="controllers/mainController.js"></script>
 		<script src="controllers/youtubeController.js"></script>
-		<script src="controllers/incrementalController.js"></script>		
+		<script src="controllers/incrementalController.js"></script>
+		<script src="controllers/kingdomController.js"></script>
+
+		<script src="factories/kingdomFactory.js"></script>
+
 		<script src="routes.js"></script>
 	</body>
 </html>
