--- a/index.html
+++ b/index.html
@@ -1,49 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Clemator's github</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
-		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" style="text/css" href="assets/css/youtube-search.css">
-		<link rel="stylesheet" style="text/css" href="assets/css/base.css">
-		<link rel="stylesheet" style="text/css" href="assets/css/incremental.css">
-	</head>
-	<body>
-		<div ng-app="myApp">
-			<div id="top-title">
-				<div class="navbar navbar-static-top navbar-inverse">
-					<div class="container-fluid">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						<a class="navbar-brand" href="#/home">Clemator</a>
-						</div>
-						<div class="collapse navbar-collapse">
-							<ul class="nav  navbar-nav">
-							  <li><a href="#/youtube">Youtube search</a></li>
-							  <li><a href="#/google">Google +</a></li>
-							  <li><a href="#/incremental">The game</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div ng-view></div>
-		</div>
-		
-		<script src="myApp.js"></script>
-		<script src="controllers/mainController.js"></script>
-		<script src="controllers/youtubeController.js"></script>
-		<script src="controllers/incrementalController.js"></script>		
-		<script src="routes.js"></script>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Clemator's github</title>
+  </head>
+  <body>
+    <div id="vue-app">
+      {{ message }}
+    </div>
+    
+    <script
+      src="https://cdn.jsdelivr.net/npm/vue"
+    ></script>
+    <script src="index.js"></script>
+  </body>
 </html>
